--- a/Cargo_Theft_Data_Preprocess.ipynb
+++ b/Cargo_Theft_Data_Preprocess.ipynb
@@ -1728,7 +1728,7 @@
    "outputs": [],
    "source": [
     "# The current DataFrame on hand should be servicable for this.\n",
-    "# df0.to_csv(\"Datasets/CrimeReport.csv\")"
+    "df0.to_csv(\"Datasets/CrimeReport.csv\")"
    ]
   },
   {
@@ -1743,6 +1743,30 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "e6695b66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    116540\n",
+       "True      20434\n",
+       "Name: recovered_flag, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is the distribution of Recovered vs. Not Recovered?\n",
+    "df0.recovered_flag.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "eca669fa",
    "metadata": {},
    "outputs": [
@@ -1941,7 +1965,7 @@
        "4           False  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,13 +1979,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "8960b6a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write this DataFrame out to a CSV file.\n",
-    "# df1.to_csv(\"Datasets/BinaryClassifier.csv\")"
+    "df1.to_csv(\"Datasets/BinaryClassifier.csv\")"
    ]
   },
   {
@@ -1975,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "99b12751",
    "metadata": {},
    "outputs": [
@@ -2193,7 +2217,7 @@
        "74       20000.0            20000     2021-12-31  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2207,13 +2231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "9255b6d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write this DataFrame out to a CSV file.\n",
-    "# df2.to_csv(\"Datasets/Regression.csv\")"
+    "df2.to_csv(\"Datasets/Regression.csv\")"
    ]
   }
  ],
