tiny change to correct code typo

--- a/DeepLearning/Machine_Learning_Testbed.ipynb
+++ b/DeepLearning/Machine_Learning_Testbed.ipynb
@@ -2058,7 +2058,7 @@
    "outputs": [],
    "source": [
     "#export second model to HDF5 File\n",
-    "nn.save(\"FBI_Model2_Save.h5\")"
+    "nn2.save(\"FBI_Model2_Save.h5\")"
    ]
   }
  ],
