Quick clean and examine the data

--- a/Cargo_Theft_Data_Preprocess.ipynb
+++ b/Cargo_Theft_Data_Preprocess.ipynb
@@ -2031,7 +2031,7 @@
    "outputs": [],
    "source": [
     "# The current DataFrame on hand should be servicable for this.\n",
-    "df_cleaned.to_csv(\"Datasets/CrimeReport.csv\")"
+    "df_cleaned.to_csv(\"Datasets/CrimeReport.csv\", index = False)"
    ]
   },
   {
@@ -2276,7 +2276,7 @@
    "outputs": [],
    "source": [
     "# Write this DataFrame out to a CSV file.\n",
-    "df1.to_csv(\"Datasets/BinaryClassifier.csv\")"
+    "df1.to_csv(\"Datasets/BinaryClassifier.csv\", index = False)"
    ]
   },
   {
@@ -2290,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "id": "99b12751",
    "metadata": {},
    "outputs": [
@@ -2322,15 +2322,16 @@
        "      <th>division_name</th>\n",
        "      <th>county_name</th>\n",
        "      <th>region_name</th>\n",
+       "      <th>population_group_code</th>\n",
        "      <th>population_group_desc</th>\n",
-       "      <th>offense_name</th>\n",
-       "      <th>offender_race</th>\n",
-       "      <th>offender_ethnicity</th>\n",
-       "      <th>offender_age</th>\n",
-       "      <th>offender_sex</th>\n",
+       "      <th>offense_code</th>\n",
+       "      <th>...</th>\n",
        "      <th>victim_type_name</th>\n",
+       "      <th>location_code</th>\n",
        "      <th>location_name</th>\n",
+       "      <th>weapon_code</th>\n",
        "      <th>weapon_name</th>\n",
+       "      <th>prop_desc_code</th>\n",
        "      <th>prop_desc_name</th>\n",
        "      <th>stolen_value</th>\n",
        "      <th>recovered_value</th>\n",
@@ -2347,15 +2348,16 @@
        "      <td>East South Central</td>\n",
        "      <td>LEE</td>\n",
        "      <td>South</td>\n",
+       "      <td>9B</td>\n",
        "      <td>MSA counties from 25,000 thru 99,999</td>\n",
-       "      <td>All Other Larceny</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>U</td>\n",
+       "      <td>23H</td>\n",
+       "      <td>...</td>\n",
        "      <td>Individual</td>\n",
+       "      <td>20</td>\n",
        "      <td>Residence/Home</td>\n",
+       "      <td>95</td>\n",
        "      <td>Unknown</td>\n",
+       "      <td>9</td>\n",
        "      <td>Credit/ Debit cards</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -2370,15 +2372,16 @@
        "      <td>South Atlantic</td>\n",
        "      <td>BERKELEY</td>\n",
        "      <td>South</td>\n",
+       "      <td>9A</td>\n",
        "      <td>MSA counties 100,000 or over</td>\n",
-       "      <td>All Other Larceny</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Not Specified</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>M</td>\n",
+       "      <td>23H</td>\n",
+       "      <td>...</td>\n",
        "      <td>Individual</td>\n",
+       "      <td>25</td>\n",
        "      <td>Other/Unknown</td>\n",
+       "      <td>95</td>\n",
        "      <td>Unknown</td>\n",
+       "      <td>77</td>\n",
        "      <td>Other</td>\n",
        "      <td>5000.0</td>\n",
        "      <td>5000</td>\n",
@@ -2393,15 +2396,16 @@
        "      <td>East South Central</td>\n",
        "      <td>MOBILE</td>\n",
        "      <td>South</td>\n",
+       "      <td>2</td>\n",
        "      <td>Cities from 100,000 thru 249,999</td>\n",
-       "      <td>Motor Vehicle Theft</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Not Hispanic or Latino</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>F</td>\n",
+       "      <td>240</td>\n",
+       "      <td>...</td>\n",
        "      <td>Individual</td>\n",
+       "      <td>20</td>\n",
        "      <td>Residence/Home</td>\n",
+       "      <td>95</td>\n",
        "      <td>Unknown</td>\n",
+       "      <td>3</td>\n",
        "      <td>Automobile</td>\n",
        "      <td>12000.0</td>\n",
        "      <td>12000</td>\n",
@@ -2416,15 +2420,16 @@
        "      <td>East South Central</td>\n",
        "      <td>MOBILE</td>\n",
        "      <td>South</td>\n",
+       "      <td>2</td>\n",
        "      <td>Cities from 100,000 thru 249,999</td>\n",
-       "      <td>Motor Vehicle Theft</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Not Hispanic or Latino</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>M</td>\n",
+       "      <td>240</td>\n",
+       "      <td>...</td>\n",
        "      <td>Individual</td>\n",
+       "      <td>20</td>\n",
        "      <td>Residence/Home</td>\n",
+       "      <td>95</td>\n",
        "      <td>Unknown</td>\n",
+       "      <td>3</td>\n",
        "      <td>Automobile</td>\n",
        "      <td>11000.0</td>\n",
        "      <td>11000</td>\n",
@@ -2439,15 +2444,16 @@
        "      <td>East South Central</td>\n",
        "      <td>MOBILE</td>\n",
        "      <td>South</td>\n",
+       "      <td>2</td>\n",
        "      <td>Cities from 100,000 thru 249,999</td>\n",
-       "      <td>Motor Vehicle Theft</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>U</td>\n",
+       "      <td>240</td>\n",
+       "      <td>...</td>\n",
        "      <td>Individual</td>\n",
+       "      <td>18</td>\n",
        "      <td>Parking/Drop Lot/Garage</td>\n",
+       "      <td>95</td>\n",
        "      <td>Unknown</td>\n",
+       "      <td>3</td>\n",
        "      <td>Automobile</td>\n",
        "      <td>20000.0</td>\n",
        "      <td>20000</td>\n",
@@ -2455,6 +2461,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2465,43 +2472,45 @@
        "54       2021          Mobile             City        Alabama   \n",
        "75       2021          Mobile             City        Alabama   \n",
        "\n",
-       "         division_name county_name region_name  \\\n",
-       "16  East South Central         LEE       South   \n",
-       "45      South Atlantic    BERKELEY       South   \n",
-       "51  East South Central      MOBILE       South   \n",
-       "54  East South Central      MOBILE       South   \n",
-       "75  East South Central      MOBILE       South   \n",
+       "         division_name county_name region_name population_group_code  \\\n",
+       "16  East South Central         LEE       South                    9B   \n",
+       "45      South Atlantic    BERKELEY       South                    9A   \n",
+       "51  East South Central      MOBILE       South                     2   \n",
+       "54  East South Central      MOBILE       South                     2   \n",
+       "75  East South Central      MOBILE       South                     2   \n",
        "\n",
-       "                   population_group_desc         offense_name offender_race  \\\n",
-       "16  MSA counties from 25,000 thru 99,999    All Other Larceny       Unknown   \n",
-       "45          MSA counties 100,000 or over    All Other Larceny         White   \n",
-       "51      Cities from 100,000 thru 249,999  Motor Vehicle Theft         White   \n",
-       "54      Cities from 100,000 thru 249,999  Motor Vehicle Theft         White   \n",
-       "75      Cities from 100,000 thru 249,999  Motor Vehicle Theft       Unknown   \n",
+       "                   population_group_desc offense_code  ... victim_type_name  \\\n",
+       "16  MSA counties from 25,000 thru 99,999          23H  ...       Individual   \n",
+       "45          MSA counties 100,000 or over          23H  ...       Individual   \n",
+       "51      Cities from 100,000 thru 249,999          240  ...       Individual   \n",
+       "54      Cities from 100,000 thru 249,999          240  ...       Individual   \n",
+       "75      Cities from 100,000 thru 249,999          240  ...       Individual   \n",
        "\n",
-       "        offender_ethnicity  offender_age offender_sex victim_type_name  \\\n",
-       "16                 Unknown           0.0            U       Individual   \n",
-       "45           Not Specified          32.0            M       Individual   \n",
-       "51  Not Hispanic or Latino          16.0            F       Individual   \n",
-       "54  Not Hispanic or Latino          52.0            M       Individual   \n",
-       "75                 Unknown           0.0            U       Individual   \n",
+       "   location_code            location_name  weapon_code weapon_name  \\\n",
+       "16            20           Residence/Home           95     Unknown   \n",
+       "45            25            Other/Unknown           95     Unknown   \n",
+       "51            20           Residence/Home           95     Unknown   \n",
+       "54            20           Residence/Home           95     Unknown   \n",
+       "75            18  Parking/Drop Lot/Garage           95     Unknown   \n",
        "\n",
-       "              location_name weapon_name       prop_desc_name  stolen_value  \\\n",
-       "16           Residence/Home     Unknown  Credit/ Debit cards           0.0   \n",
-       "45            Other/Unknown     Unknown                Other        5000.0   \n",
-       "51           Residence/Home     Unknown           Automobile       12000.0   \n",
-       "54           Residence/Home     Unknown           Automobile       11000.0   \n",
-       "75  Parking/Drop Lot/Garage     Unknown           Automobile       20000.0   \n",
+       "   prop_desc_code       prop_desc_name  stolen_value recovered_value  \\\n",
+       "16              9  Credit/ Debit cards           0.0               0   \n",
+       "45             77                Other        5000.0            5000   \n",
+       "51              3           Automobile       12000.0           12000   \n",
+       "54              3           Automobile       11000.0           11000   \n",
+       "75              3           Automobile       20000.0           20000   \n",
        "\n",
-       "    recovered_value date_recovered  \n",
-       "16                0     2021-10-26  \n",
-       "45             5000     2021-11-29  \n",
-       "51            12000     2021-10-17  \n",
-       "54            11000     2021-09-24  \n",
-       "75            20000     2021-12-31  "
+       "   date_recovered  \n",
+       "16     2021-10-26  \n",
+       "45     2021-11-29  \n",
+       "51     2021-10-17  \n",
+       "54     2021-09-24  \n",
+       "75     2021-12-31  \n",
+       "\n",
+       "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2515,13 +2524,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "9255b6d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write this DataFrame out to a CSV file.\n",
-    "df2.to_csv(\"Datasets/Regression.csv\")"
+    "df2.to_csv(\"Datasets/Regression.csv\", index = False)"
    ]
   }
  ],
