--- a/Cargo_Theft_Clustering.ipynb
+++ b/Cargo_Theft_Clustering.ipynb
@@ -1299,6 +1299,318 @@
     "# Deal with the duplicates.\n",
     "recov_df.drop_duplicates()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdc58a75",
+   "metadata": {},
+   "source": [
+    "## Ready and Run the PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "669ad819",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(122956, 101)\n",
+      "(17281, 97)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use get_dummies() to handle the categorical features.\n",
+    "features = [\"state_name\", \"population_group_code\", \"offense_code\", \"victim_type_code\"]\n",
+    "X_stolen = pd.get_dummies(stolen_df, columns = features)\n",
+    "X_recov = pd.get_dummies(recov_df, columns = features)\n",
+    "\n",
+    "print(X_stolen.shape)\n",
+    "print(X_recov.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "138da657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardize the data with StandardScaler().\n",
+    "stolenX_scaled = StandardScaler().fit_transform(X_stolen)\n",
+    "recovX_scaled = StandardScaler().fit_transform(X_recov)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1d7ba40b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(122956, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC 1</th>\n",
+       "      <th>PC 2</th>\n",
+       "      <th>PC 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.605419</td>\n",
+       "      <td>1.346002</td>\n",
+       "      <td>-0.177242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.970620</td>\n",
+       "      <td>0.040110</td>\n",
+       "      <td>1.038980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.969996</td>\n",
+       "      <td>0.044291</td>\n",
+       "      <td>1.007054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.967286</td>\n",
+       "      <td>0.062410</td>\n",
+       "      <td>0.868717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.240702</td>\n",
+       "      <td>-0.531430</td>\n",
+       "      <td>-0.564752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-1.240078</td>\n",
+       "      <td>-0.527249</td>\n",
+       "      <td>-0.596677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-1.237368</td>\n",
+       "      <td>-0.509130</td>\n",
+       "      <td>-0.735014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-1.119465</td>\n",
+       "      <td>0.658702</td>\n",
+       "      <td>0.598656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-1.119000</td>\n",
+       "      <td>0.661838</td>\n",
+       "      <td>0.574705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-1.129937</td>\n",
+       "      <td>0.034804</td>\n",
+       "      <td>-0.410309</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PC 1      PC 2      PC 3\n",
+       "0 -0.605419  1.346002 -0.177242\n",
+       "1 -0.970620  0.040110  1.038980\n",
+       "2 -0.969996  0.044291  1.007054\n",
+       "3 -0.967286  0.062410  0.868717\n",
+       "4 -1.240702 -0.531430 -0.564752\n",
+       "5 -1.240078 -0.527249 -0.596677\n",
+       "6 -1.237368 -0.509130 -0.735014\n",
+       "7 -1.119465  0.658702  0.598656\n",
+       "8 -1.119000  0.661838  0.574705\n",
+       "9 -1.129937  0.034804 -0.410309"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use PCA to reduce the stolen values DataFrame to three principal components.\n",
+    "pca = PCA(n_components = 3, random_state = 0) # Use Random State of 0 for this one.\n",
+    "pca_stolen = pca.fit_transform(stolenX_scaled)\n",
+    "\n",
+    "# Put the results into a DataFrame.\n",
+    "stolenpca_df = pd.DataFrame(data = pca_stolen, columns = [\"PC 1\", \"PC 2\", \"PC 3\"], index = X_stolen.index)\n",
+    "print(stolenpca_df.shape)\n",
+    "stolenpca_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fb0dc5cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(17281, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC 1</th>\n",
+       "      <th>PC 2</th>\n",
+       "      <th>PC 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>-1.051555</td>\n",
+       "      <td>0.394574</td>\n",
+       "      <td>0.473535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>-0.520877</td>\n",
+       "      <td>0.127223</td>\n",
+       "      <td>1.170733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>-0.757839</td>\n",
+       "      <td>0.692213</td>\n",
+       "      <td>-1.503862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>-0.762056</td>\n",
+       "      <td>0.686654</td>\n",
+       "      <td>-1.503839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>-0.712609</td>\n",
+       "      <td>0.733277</td>\n",
+       "      <td>-1.500948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>1.283008</td>\n",
+       "      <td>-0.748417</td>\n",
+       "      <td>0.440788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>1.420841</td>\n",
+       "      <td>-0.523232</td>\n",
+       "      <td>-0.983288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>-0.706011</td>\n",
+       "      <td>0.374155</td>\n",
+       "      <td>0.182528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>-0.568178</td>\n",
+       "      <td>0.599340</td>\n",
+       "      <td>-1.241548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>-0.425182</td>\n",
+       "      <td>0.200840</td>\n",
+       "      <td>0.669516</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         PC 1      PC 2      PC 3\n",
+       "16  -1.051555  0.394574  0.473535\n",
+       "42  -0.520877  0.127223  1.170733\n",
+       "46  -0.757839  0.692213 -1.503862\n",
+       "49  -0.762056  0.686654 -1.503839\n",
+       "66  -0.712609  0.733277 -1.500948\n",
+       "83   1.283008 -0.748417  0.440788\n",
+       "87   1.420841 -0.523232 -0.983288\n",
+       "91  -0.706011  0.374155  0.182528\n",
+       "95  -0.568178  0.599340 -1.241548\n",
+       "104 -0.425182  0.200840  0.669516"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use PCA to reduce the recovered values DataFrame to three principal components.\n",
+    "pca_recov = pca.fit_transform(recovX_scaled)\n",
+    "\n",
+    "# Put the results into a DataFrame.\n",
+    "recovpca_df = pd.DataFrame(data = pca_recov, columns = [\"PC 1\", \"PC 2\", \"PC 3\"], index = X_recov.index)\n",
+    "print(recovpca_df.shape)\n",
+    "recovpca_df.head(10)"
+   ]
   }
  ],
  "metadata": {
