uploading second wave of neural network testing and files

--- a/DeepLearning/Machine_Learning_Testbed.ipynb
+++ b/DeepLearning/Machine_Learning_Testbed.ipynb
@@ -1389,7 +1389,7 @@
    "outputs": [],
    "source": [
     "#export this CSV for group and to save time in future\n",
-    "fbi_df2.to_csv(\"FBI_csv_object_encoded.csv\")"
+    "fbi_df2.to_csv(\"FBI_csv_object_encoded.csv\", index=False)"
    ]
   },
   {
