Added Assumption Check
Added Assumption Check with ANOVA test.

--- a/Cargo Theft Clustering Analysis.ipynb
+++ b/Cargo Theft Clustering Analysis.ipynb
@@ -2124,6 +2124,219 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a85eac61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(recovered_value)</th>\n",
+       "      <td>2.192912e+15</td>\n",
+       "      <td>1143.0</td>\n",
+       "      <td>0.512527</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>6.040608e+16</td>\n",
+       "      <td>16137.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          sum_sq       df         F  PR(>F)\n",
+       "C(recovered_value)  2.192912e+15   1143.0  0.512527     1.0\n",
+       "Residual            6.040608e+16  16137.0       NaN     NaN"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ANOVA Table\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "\n",
+    "model = ols('stolen_value ~ C(recovered_value)', data=recov_df).fit()\n",
+    "aov_table = sm.stats.anova_lm(model, typ=2)\n",
+    "aov_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "92a711e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>mean_sq</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "      <th>eta_sq</th>\n",
+       "      <th>omega_sq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C(recovered_value)</th>\n",
+       "      <td>2.192912e+15</td>\n",
+       "      <td>1143.0</td>\n",
+       "      <td>1.918558e+12</td>\n",
+       "      <td>0.512527</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.035031</td>\n",
+       "      <td>-0.033317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>6.040608e+16</td>\n",
+       "      <td>16137.0</td>\n",
+       "      <td>3.743328e+12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          sum_sq       df       mean_sq         F  PR(>F)  \\\n",
+       "C(recovered_value)  2.192912e+15   1143.0  1.918558e+12  0.512527     1.0   \n",
+       "Residual            6.040608e+16  16137.0  3.743328e+12       NaN     NaN   \n",
+       "\n",
+       "                      eta_sq  omega_sq  \n",
+       "C(recovered_value)  0.035031 -0.033317  \n",
+       "Residual                 NaN       NaN  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The function below was created specifically for the one-way ANOVA table results returned for Type II sum of squares.\n",
+    "def anova_table(aov):\n",
+    "    aov['mean_sq'] = aov[:]['sum_sq']/aov[:]['df']\n",
+    "\n",
+    "    aov['eta_sq'] = aov[:-1]['sum_sq']/sum(aov['sum_sq'])\n",
+    "\n",
+    "    aov['omega_sq'] = (aov[:-1]['sum_sq']-(aov[:-1]['df']*aov['mean_sq'][-1]))/(sum(aov['sum_sq'])+aov['mean_sq'][-1])\n",
+    "\n",
+    "    cols = ['sum_sq', 'df', 'mean_sq', 'F', 'PR(>F)', 'eta_sq', 'omega_sq']\n",
+    "    aov = aov[cols]\n",
+    "    return aov\n",
+    "\n",
+    "anova_table(aov_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f36cf579",
+   "metadata": {},
+   "source": [
+    "## Assumption Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bbb6f3fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.9/site-packages/scipy/stats/morestats.py:1760: UserWarning: p-value may not be accurate for N > 5000.\n",
+      "  warnings.warn(\"p-value may not be accurate for N > 5000.\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.0033310651779174805, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Normality\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "stats.shapiro(model.resid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81c9d64d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
