more model making

--- a/DeepLearning/Model Modification/ModelExperimenting.ipynb
+++ b/DeepLearning/Model Modification/ModelExperimenting.ipynb
@@ -479,7 +479,7 @@
     }
    ],
    "source": [
-    "#forgot to export without the index (oops)\n",
+    "#removing the index\n",
     "usable_df = usable_df.drop(columns=\"Unnamed: 0\",axis= 1)\n",
     "usable_df.head()"
    ]
@@ -491,7 +491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#re-braking up the data.\n",
+    "#re-breaking up the data.\n",
     "#SPLIT THE DATA FOR TESTING AND TRAINING\n",
     "y = usable_df[\"recovered_flag\"].values\n",
     "X = usable_df.drop(labels =\"recovered_flag\",axis =1).values\n",
