All Errors corrected

--- a/DeepLearning/Model Modification/DataChangeModelExperience.ipynb
+++ b/DeepLearning/Model Modification/DataChangeModelExperience.ipynb
@@ -1919,8 +1919,7 @@
    ],
    "source": [
     "#send it\n",
-    "fit_model2 = nn7.fit(X_train_scaled,y_train,epochs=100)\n",
-    "#it's a disaster"
+    "fit_model2 = nn7.fit(X_train_scaled,y_train,epochs=100)"
    ]
   },
   {
@@ -1942,7 +1941,7 @@
     "# Evaluate the model using the test data\n",
     "model_loss2, model_accuracy2 = nn7.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "print(f\"Loss: {model_loss2}, Accuracy: {model_accuracy2}\")\n",
-    "#barely any improvement after running for twice as long"
+    "#same score despite using changed data and a tiny model"
    ]
   }
  ],
